// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composeDigest > EMAIL-05 — snapshot with failed firm included (footer format locked) > digest-with-failed-firm 1`] = `
"<!doctype html>
<html lang="ko">
<head>
<meta charset="utf-8" />
<meta name="viewport" content="width=device-width, initial-scale=1" />
<meta name="color-scheme" content="light only" />
<meta name="supported-color-schemes" content="light" />
<title>Daily Legal Digest — 2026-04-17</title>
</head>
<body style="margin:0;padding:0;background:#E8E4DC;font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#E8E4DC;">
  <tr>
    <td align="center" style="padding:32px 12px 64px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:640px;width:100%;background:#FAF8F4;color:#1A1917;font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;font-size:15px;line-height:1.65;">
        <tr><td style="padding:16px 32px;border-bottom:3px solid #1A1917;">
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
      <tr>
        <td style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:11px;letter-spacing:0.14em;color:#0F0E0C;text-transform:uppercase;font-weight:500;">Daily Legal Digest</td>
        <td align="right" style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:11px;letter-spacing:0.1em;color:#6B6A66;text-transform:uppercase;">2026-04-17</td>
      </tr>
    </table>
  </td></tr>
        <tr><td style="padding:22px 32px;background:#F4F1EA;border-bottom:1px solid #E2DDD3;">
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
      <tr>
        
    <td style="padding:0 18px;vertical-align:top;">
      <div style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10px;letter-spacing:0.14em;text-transform:uppercase;color:#6B6A66;margin-bottom:4px;">New</div>
      <div style="font-family:'Noto Serif KR', 'Nanum Myeongjo', 'Apple SD Gothic Neo', serif;font-size:22px;font-weight:500;color:#0F0E0C;line-height:1;">3<span style="font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;font-size:12px;font-weight:400;color:#6B6A66;margin-left:3px;">items</span></div>
    </td>
        
    <td style="padding:0 18px;border-left:1px solid #D9D4C9;vertical-align:top;">
      <div style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10px;letter-spacing:0.14em;text-transform:uppercase;color:#6B6A66;margin-bottom:4px;">Firms</div>
      <div style="font-family:'Noto Serif KR', 'Nanum Myeongjo', 'Apple SD Gothic Neo', serif;font-size:22px;font-weight:500;color:#0F0E0C;line-height:1;">1<span style="font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;font-size:12px;font-weight:400;color:#6B6A66;margin-left:3px;">active</span></div>
    </td>
      </tr>
    </table>
  </td></tr>
        
        <tr><td style="padding:28px 32px 24px;border-top:3px solid #1A1917;border-bottom:1px solid #E2DDD3;">
    
    <div style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10px;letter-spacing:0.2em;text-transform:uppercase;color:#6B6A66;padding-bottom:12px;border-bottom:2px solid #1A1917;margin-bottom:20px;">Cooley</div>
    
    <div style="padding:6px 0 22px;">
      <div style="margin-bottom:8px;"><span style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10px;letter-spacing:0.12em;text-transform:uppercase;color:#6B6A66;">2026.04.15</span></div>
      <div style="font-family:'Noto Serif KR', 'Nanum Myeongjo', 'Apple SD Gothic Neo', serif;font-size:20px;font-weight:500;line-height:1.3;margin:0 0 10px;letter-spacing:-0.005em;">
        <a href="https://cooley.com/news/insight/2026/2026-04-15-ai-reg" style="color:#234C7A;text-decoration:underline;text-decoration-color:#B7C4D7;">AI Regulation Update April 2026</a>
      </div>
      <p style="font-size:14.5px;line-height:1.7;color:#2A2824;margin:0 0 12px;font-weight:400;">4월 AI 규제 동향을 정리한 요약입니다. 핵심 3가지 변경사항을 다룹니다.</p>
      <a href="https://cooley.com/news/insight/2026/2026-04-15-ai-reg" style="display:inline-block;font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10.5px;letter-spacing:0.08em;color:#234C7A;text-transform:uppercase;text-decoration:none;border-bottom:1px solid #B7C4D7;padding:8px 0 7px;">원문 읽기 &nbsp;→</a>
    </div>
    <div style="padding:22px 0 22px;border-top:1px solid #EFEBE2;">
      
      <div style="font-family:'Noto Serif KR', 'Nanum Myeongjo', 'Apple SD Gothic Neo', serif;font-size:20px;font-weight:500;line-height:1.3;margin:0 0 10px;letter-spacing:-0.005em;">
        <a href="https://cooley.com/news/insight/2026/2026-04-10-ma" style="color:#234C7A;text-decoration:underline;text-decoration-color:#B7C4D7;">Second &lt;Article&gt; with HTML-ish Title</a>
      </div>
      <p style="font-size:14.5px;line-height:1.7;color:#2A2824;margin:0 0 12px;font-weight:400;">Second &lt;Article&gt; with HTML-ish Title <span style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;color:#8A4438;font-size:11px;letter-spacing:0.04em;">⚠ 요약 실패 — quota exceeded</span></p>
      <a href="https://cooley.com/news/insight/2026/2026-04-10-ma" style="display:inline-block;font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10.5px;letter-spacing:0.08em;color:#234C7A;text-transform:uppercase;text-decoration:none;border-bottom:1px solid #B7C4D7;padding:8px 0 7px;">원문 읽기 &nbsp;→</a>
    </div>
    <div style="padding:22px 0 22px;border-top:1px solid #EFEBE2;">
      
      <div style="font-family:'Noto Serif KR', 'Nanum Myeongjo', 'Apple SD Gothic Neo', serif;font-size:20px;font-weight:500;line-height:1.3;margin:0 0 10px;letter-spacing:-0.005em;">
        <a href="https://cooley.com/news/insight/2026/2026-04-05-privacy" style="color:#234C7A;text-decoration:underline;text-decoration-color:#B7C4D7;">Title-only Article (B3 skipped)</a>
      </div>
      <p style="font-size:14.5px;line-height:1.7;color:#2A2824;margin:0 0 12px;font-weight:400;">Title-only Article (B3 skipped) <span style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;color:#F57F17;font-size:11px;letter-spacing:0.04em;">⚠ 본문 없음</span></p>
      <a href="https://cooley.com/news/insight/2026/2026-04-05-privacy" style="display:inline-block;font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10.5px;letter-spacing:0.08em;color:#234C7A;text-transform:uppercase;text-decoration:none;border-bottom:1px solid #B7C4D7;padding:8px 0 7px;">원문 읽기 &nbsp;→</a>
    </div>
    
  </td></tr>
        <tr><td style="padding:28px 32px;background:#F4F1EA;border-bottom:1px solid #E2DDD3;">
    <div style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10px;letter-spacing:0.14em;text-transform:uppercase;color:#6B6A66;margin-bottom:10px;">수집 실패 · Fetch failed</div>
    <div><div style="margin-top:6px;"><span style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;color:#8A4438;font-size:11px;">[http-503]</span> <span style="color:#2A2824;font-size:13px;">Clifford Chance</span> <span style="color:#6B6A66;font-size:12px;">(clifford-chance)</span> <span style="color:#6B6A66;font-size:12px;">— RSS fetch clifford-chance: HTTP 503</span></div></div>
    <div style="margin-top:10px;font-size:12px;color:#6B6A66;">다음 실행에서 자동으로 재시도됩니다.</div>
  </td></tr>
        
        <tr><td style="padding:28px 32px 40px;background:#1A1917;color:#A8A49B;font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;font-size:12px;line-height:1.65;">
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="border-bottom:1px solid #2E2C28;">
      <tr>
        <td style="padding-bottom:16px;font-family:'Noto Serif KR', 'Nanum Myeongjo', 'Apple SD Gothic Neo', serif;font-size:14px;color:#FAF8F4;font-weight:500;">Daily Legal Digest</td>
        <td align="right" style="padding-bottom:16px;font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10px;letter-spacing:0.1em;text-transform:uppercase;color:#7A766D;">2026-04-17 · 18:00 KST</td>
      </tr>
    </table>
    <p style="margin:16px 0 8px;">이 메일은 LegalNewsletter 자동화 파이프라인이 수집한 각 로펌의 공개 뉴스레터/Legal Update 페이지를 한국어로 요약한 것입니다. 원문의 저작권은 각 로펌에 있으며, 전문은 반드시 원문 링크를 통해 확인하시기 바랍니다.</p>
    <div style="font-size:11px;color:#7A766D;margin-top:14px;line-height:1.6;">본 다이제스트는 정보 제공 목적의 개인 열람용 요약이며 법률 자문이 아닙니다. 구체적 사안에 대한 판단은 반드시 해당 로펌 원문 또는 별도 자문을 참고하시기 바랍니다.</div>
  </td></tr>
      </table>
    </td>
  </tr>
</table>
</body>
</html>"
`;

exports[`composeDigest > HTML snapshot is stable 1`] = `
"<!doctype html>
<html lang="ko">
<head>
<meta charset="utf-8" />
<meta name="viewport" content="width=device-width, initial-scale=1" />
<meta name="color-scheme" content="light only" />
<meta name="supported-color-schemes" content="light" />
<title>Daily Legal Digest — 2026-04-17</title>
</head>
<body style="margin:0;padding:0;background:#E8E4DC;font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#E8E4DC;">
  <tr>
    <td align="center" style="padding:32px 12px 64px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:640px;width:100%;background:#FAF8F4;color:#1A1917;font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;font-size:15px;line-height:1.65;">
        <tr><td style="padding:16px 32px;border-bottom:3px solid #1A1917;">
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
      <tr>
        <td style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:11px;letter-spacing:0.14em;color:#0F0E0C;text-transform:uppercase;font-weight:500;">Daily Legal Digest</td>
        <td align="right" style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:11px;letter-spacing:0.1em;color:#6B6A66;text-transform:uppercase;">2026-04-17</td>
      </tr>
    </table>
  </td></tr>
        <tr><td style="padding:22px 32px;background:#F4F1EA;border-bottom:1px solid #E2DDD3;">
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
      <tr>
        
    <td style="padding:0 18px;vertical-align:top;">
      <div style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10px;letter-spacing:0.14em;text-transform:uppercase;color:#6B6A66;margin-bottom:4px;">New</div>
      <div style="font-family:'Noto Serif KR', 'Nanum Myeongjo', 'Apple SD Gothic Neo', serif;font-size:22px;font-weight:500;color:#0F0E0C;line-height:1;">3<span style="font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;font-size:12px;font-weight:400;color:#6B6A66;margin-left:3px;">items</span></div>
    </td>
        
    <td style="padding:0 18px;border-left:1px solid #D9D4C9;vertical-align:top;">
      <div style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10px;letter-spacing:0.14em;text-transform:uppercase;color:#6B6A66;margin-bottom:4px;">Firms</div>
      <div style="font-family:'Noto Serif KR', 'Nanum Myeongjo', 'Apple SD Gothic Neo', serif;font-size:22px;font-weight:500;color:#0F0E0C;line-height:1;">1<span style="font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;font-size:12px;font-weight:400;color:#6B6A66;margin-left:3px;">active</span></div>
    </td>
      </tr>
    </table>
  </td></tr>
        
        <tr><td style="padding:28px 32px 24px;border-top:3px solid #1A1917;border-bottom:1px solid #E2DDD3;">
    
    <div style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10px;letter-spacing:0.2em;text-transform:uppercase;color:#6B6A66;padding-bottom:12px;border-bottom:2px solid #1A1917;margin-bottom:20px;">Cooley</div>
    
    <div style="padding:6px 0 22px;">
      <div style="margin-bottom:8px;"><span style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10px;letter-spacing:0.12em;text-transform:uppercase;color:#6B6A66;">2026.04.15</span></div>
      <div style="font-family:'Noto Serif KR', 'Nanum Myeongjo', 'Apple SD Gothic Neo', serif;font-size:20px;font-weight:500;line-height:1.3;margin:0 0 10px;letter-spacing:-0.005em;">
        <a href="https://cooley.com/news/insight/2026/2026-04-15-ai-reg" style="color:#234C7A;text-decoration:underline;text-decoration-color:#B7C4D7;">AI Regulation Update April 2026</a>
      </div>
      <p style="font-size:14.5px;line-height:1.7;color:#2A2824;margin:0 0 12px;font-weight:400;">4월 AI 규제 동향을 정리한 요약입니다. 핵심 3가지 변경사항을 다룹니다.</p>
      <a href="https://cooley.com/news/insight/2026/2026-04-15-ai-reg" style="display:inline-block;font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10.5px;letter-spacing:0.08em;color:#234C7A;text-transform:uppercase;text-decoration:none;border-bottom:1px solid #B7C4D7;padding:8px 0 7px;">원문 읽기 &nbsp;→</a>
    </div>
    <div style="padding:22px 0 22px;border-top:1px solid #EFEBE2;">
      
      <div style="font-family:'Noto Serif KR', 'Nanum Myeongjo', 'Apple SD Gothic Neo', serif;font-size:20px;font-weight:500;line-height:1.3;margin:0 0 10px;letter-spacing:-0.005em;">
        <a href="https://cooley.com/news/insight/2026/2026-04-10-ma" style="color:#234C7A;text-decoration:underline;text-decoration-color:#B7C4D7;">Second &lt;Article&gt; with HTML-ish Title</a>
      </div>
      <p style="font-size:14.5px;line-height:1.7;color:#2A2824;margin:0 0 12px;font-weight:400;">Second &lt;Article&gt; with HTML-ish Title <span style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;color:#8A4438;font-size:11px;letter-spacing:0.04em;">⚠ 요약 실패 — quota exceeded</span></p>
      <a href="https://cooley.com/news/insight/2026/2026-04-10-ma" style="display:inline-block;font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10.5px;letter-spacing:0.08em;color:#234C7A;text-transform:uppercase;text-decoration:none;border-bottom:1px solid #B7C4D7;padding:8px 0 7px;">원문 읽기 &nbsp;→</a>
    </div>
    <div style="padding:22px 0 22px;border-top:1px solid #EFEBE2;">
      
      <div style="font-family:'Noto Serif KR', 'Nanum Myeongjo', 'Apple SD Gothic Neo', serif;font-size:20px;font-weight:500;line-height:1.3;margin:0 0 10px;letter-spacing:-0.005em;">
        <a href="https://cooley.com/news/insight/2026/2026-04-05-privacy" style="color:#234C7A;text-decoration:underline;text-decoration-color:#B7C4D7;">Title-only Article (B3 skipped)</a>
      </div>
      <p style="font-size:14.5px;line-height:1.7;color:#2A2824;margin:0 0 12px;font-weight:400;">Title-only Article (B3 skipped) <span style="font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;color:#F57F17;font-size:11px;letter-spacing:0.04em;">⚠ 본문 없음</span></p>
      <a href="https://cooley.com/news/insight/2026/2026-04-05-privacy" style="display:inline-block;font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10.5px;letter-spacing:0.08em;color:#234C7A;text-transform:uppercase;text-decoration:none;border-bottom:1px solid #B7C4D7;padding:8px 0 7px;">원문 읽기 &nbsp;→</a>
    </div>
    
  </td></tr>
        
        
        <tr><td style="padding:28px 32px 40px;background:#1A1917;color:#A8A49B;font-family:'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;font-size:12px;line-height:1.65;">
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="border-bottom:1px solid #2E2C28;">
      <tr>
        <td style="padding-bottom:16px;font-family:'Noto Serif KR', 'Nanum Myeongjo', 'Apple SD Gothic Neo', serif;font-size:14px;color:#FAF8F4;font-weight:500;">Daily Legal Digest</td>
        <td align="right" style="padding-bottom:16px;font-family:'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:10px;letter-spacing:0.1em;text-transform:uppercase;color:#7A766D;">2026-04-17 · 18:00 KST</td>
      </tr>
    </table>
    <p style="margin:16px 0 8px;">이 메일은 LegalNewsletter 자동화 파이프라인이 수집한 각 로펌의 공개 뉴스레터/Legal Update 페이지를 한국어로 요약한 것입니다. 원문의 저작권은 각 로펌에 있으며, 전문은 반드시 원문 링크를 통해 확인하시기 바랍니다.</p>
    <div style="font-size:11px;color:#7A766D;margin-top:14px;line-height:1.6;">본 다이제스트는 정보 제공 목적의 개인 열람용 요약이며 법률 자문이 아닙니다. 구체적 사안에 대한 판단은 반드시 해당 로펌 원문 또는 별도 자문을 참고하시기 바랍니다.</div>
  </td></tr>
      </table>
    </td>
  </tr>
</table>
</body>
</html>"
`;
